@@ -5,6 +5,8 @@
 		Middle mouse button support
 
 		Fast mouse in full-screen modes
+
+		Dark background behind text in conversations
 		
 		You can now freeze in SI
 
